Update media section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <button onclick="scroller('about-me')" class="menu-link">About Me</button>
         </li>
         <li class="menu-item">
+          <button onclick="scroller('about-me')" class="menu-link">Media</button>
+        </li>
+        <li class="menu-item">
           <button onclick="scroller('work-exp')" class="menu-link">Work Experience</button>
         </li>
         <li class="menu-item">
@@ -87,6 +90,9 @@
           <button onclick="scroller('about-me')" class="menu-link">About Me</button>
         </li>
         <li class="menu-item-top">
+          <button onclick="scroller('media')" class="menu-link">Media</button>
+        </li>
+        <li class="menu-item-top">
           <button onclick="scroller('work-exp')" class="menu-link">Work Experience</button>
         </li>
         <li class="menu-item-top">
@@ -123,12 +129,29 @@
 
     <!-- Media Section -->
     <section id="media">
-        <h1 class="main-title">Media</h1>
-        <p class="about-blurb">
-            Test 2
-           <iframe width="420" height="315"
-           src="https://www.youtube.com/embed/u9EbNJ-xiyQ"> </iframe> 
-        </p>
+        <h1 class="main-title not-top">Media</h1>
+        <div class="row med-table">
+          <div class="col-3">
+            <iframe width="250" height="175"
+            src="https://www.youtube.com/embed/u9EbNJ-xiyQ"> </iframe> 
+          </div>
+            
+           <div class="col-9">
+            <h4 class="med-title">How the Massachusetts Attorney General Fought for Investment Fraud Victims</h4>
+            <p>I am featured in this video in my role as a paralegal at the Massachusetts Attorney General's Office discussing the impact of crypto fraud on consumers in Massachusetts. The video highlights one of our team's cases Commonwealth of Massachusetts v. SBT Investments Limited. This video was produced by TRM Labs--a blockchain analytics company.</p>
+          </div>
+        </div>
+
+        <div class="row med-table">
+          <div class="col-9">
+            <h4 class="med-title">A victim of a crypto ‘pig butchering’ scam just got his $140,000 back</h4>
+            <p>A youtube video produced by TRM Labs, ablockchain analytics company. I am featured in this video in my role as a paralegal at the Massachusetts Attorney General's Office discussing the impact of crypto fraud on consumers in Massachusetts. The video highlights one of our team's cases Commonwealth of Massachusetts v. SBT Investments Limited.</p>
+          </div>
+          <div class="col-3">
+            <img src="images/npr-logo.png" width="250" height="175">
+          </div>
+            
+        </div>
 
     </section>
 
