Padding to main section

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
 
     <div class="social-div">
-        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" class="social-link"><i class="fa-brands fa-linkedin social-logo"></i></a>
-        <a href="https://github.com/IanMcConachie" class="social-link"><i class="fa-brands fa-github social-logo"></i></a>
+        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" target="_blank" class="social-link"><i class="fa-brands fa-linkedin social-logo"></i></a>
+        <a href="https://github.com/IanMcConachie" target="_blank" class="social-link"><i class="fa-brands fa-github social-logo"></i></a>
     </div>
   </div>
 
@@ -78,8 +78,8 @@
 
     <!-- Social Links -->
     <div class="social-div-top">
-        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" class="social-link"><i class="fa-brands fa-linkedin social-logo-top"></i></a>
-        <a href="https://github.com/IanMcConachie" class="social-link"><i class="fa-brands fa-github social-logo-top"></i></a>
+        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" target="_blank" class="social-link"><i class="fa-brands fa-linkedin social-logo-top"></i></a>
+        <a href="https://github.com/IanMcConachie" target="_blank" class="social-link"><i class="fa-brands fa-github social-logo-top"></i></a>
     </div>
 
 
@@ -130,25 +130,25 @@
     <!-- Media Section -->
     <section id="media">
         <h1 class="main-title not-top">Media</h1>
-        <div class="row med-table">
-          <div class="col-3">
-            <iframe width="250" height="175"
+        <div class="row medi-table">
+          <div class="col-4">
+            <iframe class="medi-vid"
             src="https://www.youtube.com/embed/u9EbNJ-xiyQ"> </iframe> 
           </div>
             
-           <div class="col-9">
-            <h4 class="med-title">How the Massachusetts Attorney General Fought for Investment Fraud Victims</h4>
+           <div class="col-8">
+            <h4 class="medi-title">How the Massachusetts Attorney General Fought for Investment Fraud Victims</h4>
             <p>I am featured in this video in my role as a paralegal at the Massachusetts Attorney General's Office discussing the impact of crypto fraud on consumers in Massachusetts. The video highlights one of our team's cases Commonwealth of Massachusetts v. SBT Investments Limited. This video was produced by TRM Labs--a blockchain analytics company.</p>
           </div>
         </div>
 
-        <div class="row med-table">
-          <div class="col-9">
-            <h4 class="med-title">A victim of a crypto ‘pig butchering’ scam just got his $140,000 back</h4>
+        <div class="row medi-table">
+          <div class="col-8">
+            <h4 class="medi-title">A victim of a crypto ‘pig butchering’ scam just got his $140,000 back</h4>
             <p>A youtube video produced by TRM Labs, ablockchain analytics company. I am featured in this video in my role as a paralegal at the Massachusetts Attorney General's Office discussing the impact of crypto fraud on consumers in Massachusetts. The video highlights one of our team's cases Commonwealth of Massachusetts v. SBT Investments Limited.</p>
           </div>
-          <div class="col-3">
-            <img src="images/npr-logo.png" width="250" height="175">
+          <div class="col-4">
+            <img src="images/npr-logo.png" class="medi-img">
           </div>
             
         </div>
@@ -304,7 +304,7 @@
           <img src="images/EBA-logo.png" class="exp-img" alt="Everybody Athletics logo.">
 
           <div class="exp-txt">
-            <h4 class="exp-title">Teammate</h4>
+            <h4 class="exp-title">Volunteer</h4>
             <h5 class="exp-desc">Everybody Athletics, 2018-20</h5>
           </div>
 
