fixing AGO logo

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="row exp-table">
         <div class="col col-xl-6 col-lg-12 col-md-6 col-sm-12 col-xs-12">
 
-          <img src="images/lazarus-logo.jpg" class="exp-img" alt="Lazarus AI logo.">
+          <img src="images/AGO-logo.jpg" class="exp-img" alt="Massachusetts Attorney General's Office logo.">
 
           <div class="exp-txt">
             <h4 class="exp-title">Cryptocurrency Paralegal</h4>
