Updated personal description

--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
     <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
-          My name is Ian McConachie and I am a paralegal at the Massachusetts Attorney General's Office specializing in cryptocurrency and investment fraud. 
+          My name is Ian McConachie and I am a paralegal at the Massachusetts Attorney General's Office specializing in cryptocurrency and investment fraud. I am currently applying to law school with the goal of pursuing a career in public interest technology law.
           <br><br>
-          I am currently applying to law school with the goal of pursuing a career in public interest technology law. The responsible use of technology is essential in protecting civil rights and strengthening our democracy.
-          <br><br>
-          Outside of work, I care deeply about volunteering. I have worked with organizations such as Prison Book Program, The Oregon Justice Resource Center, Meals on Wheels, and The Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
+          I care deeply about public service. I have worked with organizations including Prison Book Program, The Oregon Justice Resource Center, Meals on Wheels, Everybody Athletics, and The Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
         </p>
 
     </section>
